<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="50">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/participant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/participant_name"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="50">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/link_or_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/link_or_phone_number"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:onClick="addParticipant"
            android:id="@+id/add_participant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:textAlignment="center"
            android:text="@string/add"
            android:textStyle="bold"
            style="?android:textAppearanceSmall"
            android:textColor="@color/white"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/event_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_id_text"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/event_id"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:text="@string/event_id_fake"
            android:layout_alignBottom="@+id/event_id_text"
            android:layout_toEndOf="@id/event_id_text"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/event_password"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            android:text="@string/event_password_fake"
            android:layout_alignBottom="@+id/password_text"
            android:layout_toEndOf="@id/password_text"/>

    </RelativeLayout>


</LinearLayout>