<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" android:id="@+id/my_toolbar"/>

    <LinearLayout
        android:id="@+id/create_event_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/my_toolbar"
        android:layout_above="@+id/btns"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="50">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_event_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/start_date_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_date_range_black_48dp"/>

            <TextView
                android:id="@+id/start_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/start_date_img"
                android:layout_alignBottom="@+id/start_date_img"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@string/start_date_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/start_date_text"
                android:layout_marginLeft="10dp"
                android:layout_alignBottom="@+id/start_date_img"
                android:textSize="25sp"
                android:text="@string/start_date"
                android:textColor="@color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/final_date_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_date_range_black_48dp"/>

            <TextView
                android:id="@+id/final_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/final_date_img"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_alignBottom="@+id/final_date_img"
                android:text="@string/final_date_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/final_date_text"
                android:layout_marginLeft="10dp"
                android:layout_alignBottom="@+id/final_date_img"
                android:textSize="25sp"
                android:text="@string/final_date"
                android:textColor="@color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/currency_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_attach_money_black_48dp"/>

            <TextView
                android:id="@+id/currency_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/currency_img"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_alignBottom="@+id/currency_img"
                android:text="@string/currency"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/currency_text"
                android:layout_marginStart="10dp"
                android:layout_alignBottom="@+id/currency_img"
                android:textSize="25sp"
                android:text="@string/rub"
                android:textColor="@color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/participants_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_people_black_48dp"/>

            <TextView
                android:id="@+id/participants_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/participants_img"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_alignBottom="@+id/participants_img"
                android:text="@string/participants_text"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/add_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:fabSize="normal"
                android:layout_marginEnd="5dp"
                android:clickable="true"
                android:backgroundTint="@color/blue"
                android:src="@drawable/plus"
                app:elevation="6dp"
                android:focusable="true" />

        </RelativeLayout>

        <ListView
            android:id="@+id/participants_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="@color/blue"
            style="?android:textAppearanceSmall"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="@color/blue"
            style="?android:textAppearanceSmall"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>