<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/join_event_id_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_id_text"
                android:textSize="25sp"
                android:textColor="@color/black" />

            <EditText
                android:layout_marginStart="120dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/join_pass_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_text"
                android:textSize="25sp"
                android:textColor="@color/black" />

            <EditText
                android:layout_marginStart="120dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="@color/blue"
            style="?android:textAppearanceSmall"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="@color/blue"
            style="?android:textAppearanceSmall"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>