<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/create_event_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btns"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="50">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/purchase_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/purchase_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="50">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/purchase_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/purchase_cost"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/currency_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_attach_money_black_48dp"/>

            <TextView
                android:id="@+id/currency_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/currency_img"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_alignBottom="@+id/currency_img"
                android:text="@string/currency"/>

            <Spinner
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/currency_text"
                android:layout_marginStart="10dp"
                android:layout_alignBottom="@+id/currency_img"
                android:entries="@array/currency_list"
                android:textColor="@color/black" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/participants_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_people_black_48dp"/>

            <TextView
                android:id="@+id/participants_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/participants_img"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_alignBottom="@+id/participants_img"
                android:text="@string/participants_text"/>

            <Button
                android:layout_alignParentRight="true"
                android:onClick="restoreOnClick"
                android:id="@+id/restore_participants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Restore"/>

        </RelativeLayout>

        <ListView
            android:id="@+id/participants_list_purchases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <Button
            android:id="@+id/cancel_btn"
            android:onClick="cancelOnClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="@color/blue"
            style="?android:textAppearanceSmall"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/save_btn"
            android:onClick="saveOnClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="@color/blue"
            style="?android:textAppearanceSmall"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>